# literate-octo-broccoli

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.txt  dll.cpp  dll.def  exports.txt  ffo.cpp
helper/: context.hpp  helper.cpp  profile.hpp  scoped_period.hpp  target_clock.hpp  timer.hpp
hooking/: byte_pattern.cpp
playground/: CMakeLists.txt  main.cpp
